# terrace-game

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  net-perf.py  resource_monitor.py  rules.md  security.md  util
.cargo/: config.toml
gui/: main.slint
src/: gui.rs  main.rs  rules.rs  ui.rs
src/ai/: compare.rs  data.rs  eval.rs  mod.rs  net.rs  plot.rs  train.rs  train_loop.rs
src/eval_hce/: mod.rs
src/mcts/: mod.rs
