[package]
name = "terrace-game"
version = "0.1.0"
edition = "2021"

# [profile.release]
# debug = 1

[features]
ai = ["dep:burn", "dep:flate2", "dep:plotters", "dep:indicatif"]
gui = ["dep:image", "dep:slint"]
default = ["ai", "gui"]

[dependencies]
# General dependencies
rand = "0.8"
lazy_static = {version = "1.4.0"}

# GUI stuff
image = {version = "0.25", optional = true}
slint = {version = "1.6", optional = true}

# AI stuff
burn = {version = "0.13.1", no-default-features = true, features = [
    # Necessary features
    "std", # Enable standard library
    "train", # Training models/autodiff
    "fusion", # Enable "fusing" multiple operations
    # Nice-to-haves
    "tui", # Terminal interface
    "metrics", # View cpu/gpu usage
    # Backends
    "candle", # Candle backend, for better performance
    "wgpu", # wgpu backend, for better error messages and debugging
    # Not a backend but required as a feature
    "cuda", # Use cuda by default
], optional = true}
flate2 = {version = "1.0", optional = true}
plotters = {version = "0.3", optional = true}
indicatif = {version = "0.17.8", optional = true}
cfg-if = "1.0.0"

[build-dependencies]
slint-build = "1.6"

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
