[package]
name = "terrace-game"
version = "0.1.0"
edition = "2021"

# [profile.release]
# debug = 1

[features]
ai = ["dep:burn", "dep:flate2", "dep:plotters", "dep:indicatif", "dep:csv", "dep:serde", "toml"]
gui = ["dep:image", "dep:slint"]
default = [
    "ai",
    "gui"
]

[dependencies]
# General dependencies
rand = "0.8"
lazy_static = {version = "1.4.0"}
log = {version = "0.4"}
env_logger = {version = "0.11"}
cfg-if = "1.0.0"

# GUI stuff
image = {version = "0.25", optional = true}
slint = {version = "1.6", optional = true}

# AI stuff
burn = {version = "0.13.1", no-default-features = true, features = [
    # Necessary features
    "std", # Enable standard library
    "train", # Training models/autodiff
    "fusion", # Enable "fusing" multiple operations
    # Nice-to-haves
    "tui", # Terminal interface
    "metrics", # View cpu/gpu usage
    # Backends
    #"candle", # Candle backend, for better performance(removed because its training is fucky)
    "tch", # PyTorch C++, Cuda/cpu backend
    "wgpu", # wgpu backend, for better error messages and debugging
    # Not a backend but required as a feature
    "cuda", # Use cuda by default
], optional = true}
# Not actually sure where this is used
flate2 = {version = "1.0", optional = true}
# Used to plot elo, loss, etc
plotters = {version = "0.3", optional = true}
# Used to compare network performance of different nets on cpu vs gpu
csv = {version = "1.3", optional = true}
# Progress bars
indicatif = {version = "0.17.8", optional = true}
toml = {version = "0.8", optional = true}
serde = {version = "1.0", optional = true, features = ["derive"]}
uuid = {version = "1.8", features = ["fast-rng", "v4"]}
[build-dependencies]
slint-build = "1.6"

# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
